--- a/src/components/appbar.html
+++ b/src/components/appbar.html
@@ -1,3 +1,5 @@
-<header class="mdui-appbar mdui-appbar-fixed mdui-shadow-0 mdui-appbar-scroll-toolbar-hide">
-    @@include('./appbar/toolbar.html')
+<header
+  class="mdui-appbar mdui-appbar-fixed mdui-shadow-0 mdui-appbar-scroll-toolbar-hide"
+>
+  @@include('./appbar/toolbar.html')
 </header>
