--- a/src/components/container.html
+++ b/src/components/container.html
@@ -1,6 +1,4 @@
 <div class="mdui-container">
-    @@include("./container/admin.html")
-    @@include("./container/encrypt.html")
-    @@include("./container/Folder.html")
-    @@include("./container/file.html")
+  @@include("./container/admin.html") @@include("./container/encrypt.html")
+  @@include("./container/Folder.html") @@include("./container/file.html")
 </div>
