--- a/src/components/container/Folder/folderlist.html
+++ b/src/components/container/Folder/folderlist.html
@@ -1,16 +1,25 @@
 <!--FolderListStart-->
-<li class="mdui-list-item mdui-ripple" data-sort data-sort-name="<!--FileEncodeReplaceName-->"
-    data-sort-date="<!--lastModifiedDateTime-->" data-sort-size="<!--size-->" style="padding-right:36px;">
-    <div class="mdui-row mdui-col-sm-12"><a href="<!--FileEncodeReplaceUrl-->/">
-            <div class="mdui-col-xs-12 mdui-col-sm-7 mdui-text-truncate"><i
-                    class="mdui-icon material-icons">folder_open</i><span>
-                    <!--FileEncodeReplaceName--></span></div>
-            <div class="mdui-col-sm-3 mdui-text-right">
-                <!--lastModifiedDateTime-->
-            </div>
-            <div class="mdui-col-sm-2 mdui-text-right">
-                <!--size-->
-            </div>
-        </a></div>
+<li
+  class="mdui-list-item mdui-ripple"
+  data-sort
+  data-sort-name="<!--FileEncodeReplaceName-->"
+  data-sort-date="<!--lastModifiedDateTime-->"
+  data-sort-size="<!--size-->"
+  style="padding-right: 36px"
+>
+  <div class="mdui-row mdui-col-sm-12">
+    <a href="<!--FileEncodeReplaceUrl-->/">
+      <div class="mdui-col-xs-12 mdui-col-sm-7 mdui-text-truncate">
+        <i class="mdui-icon material-icons">folder_open</i
+        ><span> <!--FileEncodeReplaceName--></span>
+      </div>
+      <div class="mdui-col-sm-3 mdui-text-right">
+        <!--lastModifiedDateTime-->
+      </div>
+      <div class="mdui-col-sm-2 mdui-text-right">
+        <!--size-->
+      </div>
+    </a>
+  </div>
 </li>
 <!--FolderListEnd-->
