--- a/src/components/container/admin.html
+++ b/src/components/container/admin.html
@@ -1,8 +1,8 @@
 <ul class="mdui-menu" id="admin-menu">
-    <li class="mdui-menu-item"><a href="javascript:;" class="mdui-ripple" id="back"><i
+    <li class="mdui-menu-item"><a href="javascript:;" class="mdui-ripple back"><i
                 class="mdui-menu-item-icon mdui-icon material-icons">arrow_back</i>返回上一页</a></li>
     <!--AdminStart-->
-    <li class="mdui-menu-item"><a href="javascript:;" class="mdui-ripple" id="refresh"><i
+    <li class="mdui-menu-item"><a href="javascript:;" class="mdui-ripple refresh"><i
                 class="mdui-menu-item-icon mdui-icon material-icons">refresh</i>刷新缓存</a></li>
     <!--AdminEnd-->
 </ul>
