--- a/src/components/drawer-list/disk-list.html
+++ b/src/components/drawer-list/disk-list.html
@@ -1,10 +1,13 @@
 <!--MultiDiskAreaStart-->
 <div class="mdui-divider"></div>
-<!--MultiDisksStart--><a href="<!--MultiDisksUrl-->" class="mdui-list-item mdui-ripple" <!--MultiDisksNow-->><i
-        class="mdui-list-item-icon mdui-icon material-icons">cloud</i>
-    <div class="mdui-list-item-content">
-        <!--MultiDisksName-->
-    </div>
+<!--MultiDisksStart--><a
+  href="<!--MultiDisksUrl-->"
+  class="mdui-list-item mdui-ripple"
+  <!--MultiDisksNow--
+  >><i class="mdui-list-item-icon mdui-icon material-icons">cloud</i>
+  <div class="mdui-list-item-content">
+    <!--MultiDisksName-->
+  </div>
 </a>
 <!--MultiDisksEnd-->
 <div class="mdui-divider"></div>
