--- a/src/components/container/Folder.html
+++ b/src/components/container/Folder.html
@@ -1,32 +1,53 @@
 <!--IsFolderStart-->
 @@include("./Folder/head.html")
-<div class="mdui-row mdui-shadow-3" style="padding: 5px;margin: 20px 0;border-radius:8px;">
-    <ul class="mdui-list">
-        <li class="mdui-list-item mdui-ripple">
-            <div class="mdui-row mdui-col-xs-12">
-                <div class="mdui-col-xs-12 mdui-col-sm-7">
-                    <!--constStr@File--><i class="mdui-icon material-icons icon-sort" data-sort="name"
-                        data-order="downward">expand_more</i></div>
-                <div class="mdui-col-sm-3 mdui-text-right">
-                    <!--constStr@EditTime--><i class="mdui-icon material-icons icon-sort" data-sort="date"
-                        data-order="downward">expand_more</i></div>
-                <div class="mdui-col-sm-2 mdui-text-right">
-                    <!--constStr@Size--><i class="mdui-icon material-icons icon-sort" data-sort="size"
-                        data-order="downward">expand_more</i></div>
-            </div>
-        </li>
-        <!--BackArrowStart-->
-        <li class="mdui-list-item mdui-ripple">
-            <div class="mdui-row mdui-col-sm-12"><a href="<!--BackArrowUrl-->">
-                    <div class="mdui-col-xs-7"><i class="mdui-icon material-icons">arrow_upward</i></div>
-                    <div class="mdui-col-xs-3 mdui-text-right"></div>
-                    <div class="mdui-col-xs-2 mdui-text-right"></div>
-                </a></div>
-        </li>
-        <!--BackArrowEnd-->
-        @@include("./Folder/folderlist.html")
-        @@include("./Folder/filelist.html")
-    </ul>
+<div
+  class="mdui-row mdui-shadow-3"
+  style="padding: 5px; margin: 20px 0; border-radius: 8px"
+>
+  <ul class="mdui-list">
+    <li class="mdui-list-item mdui-ripple">
+      <div class="mdui-row mdui-col-xs-12">
+        <div class="mdui-col-xs-12 mdui-col-sm-7">
+          <!--constStr@File--><i
+            class="mdui-icon material-icons icon-sort"
+            data-sort="name"
+            data-order="downward"
+            >expand_more</i
+          >
+        </div>
+        <div class="mdui-col-sm-3 mdui-text-right">
+          <!--constStr@EditTime--><i
+            class="mdui-icon material-icons icon-sort"
+            data-sort="date"
+            data-order="downward"
+            >expand_more</i
+          >
+        </div>
+        <div class="mdui-col-sm-2 mdui-text-right">
+          <!--constStr@Size--><i
+            class="mdui-icon material-icons icon-sort"
+            data-sort="size"
+            data-order="downward"
+            >expand_more</i
+          >
+        </div>
+      </div>
+    </li>
+    <!--BackArrowStart-->
+    <li class="mdui-list-item mdui-ripple">
+      <div class="mdui-row mdui-col-sm-12">
+        <a href="<!--BackArrowUrl-->">
+          <div class="mdui-col-xs-7">
+            <i class="mdui-icon material-icons">arrow_upward</i>
+          </div>
+          <div class="mdui-col-xs-3 mdui-text-right"></div>
+          <div class="mdui-col-xs-2 mdui-text-right"></div>
+        </a>
+      </div>
+    </li>
+    <!--BackArrowEnd-->
+    @@include("./Folder/folderlist.html") @@include("./Folder/filelist.html")
+  </ul>
 </div>
 @@include("./Folder/foot.html")
 <!--IsFolderEnd-->
