--- a/src/components/container/file.html
+++ b/src/components/container/file.html
@@ -1,27 +1,10 @@
 <div id="file">
-    <!--IsimgFileStart--><img class="mdui-img-fluid mdui-center mdui-m-t-5" src="<!--FileDownUrl-->" />
-    <!--IsimgFileEnd-->
-    <!--IsmusicFileStart--><audio class="mdui-center" src="<!--FileDownUrl-->" controls autoplay
-        style="width: 100%;margin-top:10%;"></audio>
-    <!--IsmusicFileEnd-->
-    <!--IsofficeFileStart--><iframe id="office-a"
-        src="https://view.officeapps.live.com/op/view.aspx?src=<!--FileEncodeDownUrl-->"
-        style="width: 100%;height: 800px" frameborder="0"></iframe>
-    <!--IsofficeFileEnd-->
-    <!--IstxtFileStart-->
-    <pre id="editor"
-        style="white-space: pre-wrap;font-family: JetBrains Mono,Fira Code,Sarasa Mono SC,Cascadia Code,Menlo,Consolas,monaco,monospace;"><!--TxtContent--></pre>
-    <!--IstxtFileEnd-->
-    <!--IsvideoFileStart--><video class="mdui-video-fluid" controls style="margin-top:20px;">
-        <source src="<!--FileDownUrl-->">
-        <p>Your browser doesn't support HTML5 video. Here is a <a href="<!--FileDownUrl-->">link to the video</a>
-            instead.</p>
-    </video>
-    <!--IsvideoFileEnd-->
-    <!--IspdfFileStart-->
-    <pre id="editor"
-    style="white-space: pre-wrap;font-family: JetBrains Mono,Fira Code,Sarasa Mono SC,Cascadia Code,Menlo,Consolas,monaco,monospace;">Loading PDF</pre>
-    <!--IspdfFileEnd-->
+    @@include("./File/img.html")
+    @@include("./File/music.html")
+    @@include("./File/video.html")
+    @@include("./File/office.html")
+    @@include("./File/pdf.html")
+    @@include("./File/txt.html")
     <!--IsOtherFileStart-->
     <!--constStr@FileNotSupport-->
     <!--IsOtherFileEnd-->
@@ -29,6 +12,7 @@
     class="mdui-fab mdui-fab-fixed mdui-ripple mdui-color-theme-accent"><i
         class="mdui-icon material-icons">file_download</i></a>
 <script>
-    document.querySelector("#admin-menu").innerHTML += '<li class="mdui-menu-item"><a href="javascript:void(0);"class="mdui-ripple"id="downloadurl"><i class="mdui-menu-item-icon mdui-icon material-icons">cloud_download</i>下载链接</a></li>'; 
-    document.querySelector('.mdui-toolbar').innerHTML += `<a href="javascript:;" class="mdui-btn mdui-btn-icon mdui-ripple mdui-hidden-sm-up" id="downloadurl" mdui-tooltip="{content: '下载链接'}"><i class="mdui-icon material-icons">cloud_download</i></a>`;</script>
+    document.querySelector("#admin-menu").innerHTML += '<li class="mdui-menu-item"><a href="javascript:void(0);"class="mdui-ripple downloadurl"><i class="mdui-menu-item-icon mdui-icon material-icons">cloud_download</i>下载链接</a></li>';
+    document.querySelector('.mdui-toolbar').innerHTML += `<a href="javascript:;" class="mdui-btn mdui-btn-icon mdui-ripple mdui-hidden-sm-up downloadurl" mdui-tooltip="{content: '下载链接'}"><i class="mdui-icon material-icons">cloud_download</i></a>`;
+</script>
 <!--IsFileEnd-->
