Dev with Snowpack & Build with Webpack!

--- a/src/components/appbar/toolbar.html
+++ b/src/components/appbar/toolbar.html
@@ -26,8 +26,7 @@
   <div class="mdui-toolbar-spacer"></div>
   <!--AdminStart--><a
     href="javascript:;"
-    class="mdui-btn mdui-btn-icon mdui-ripple mdui-hidden-sm-up"
-    id="refresh"
+    class="mdui-btn mdui-btn-icon mdui-ripple mdui-hidden-sm-up refresh"
     mdui-tooltip="{content: '刷新缓存'}"
     ><i class="mdui-icon material-icons">refresh</i></a
   >
