--- a/src/components/drawer-list/disk-list.html
+++ b/src/components/drawer-list/disk-list.html
@@ -4,7 +4,8 @@
   href="<!--MultiDisksUrl-->"
   class="mdui-list-item mdui-ripple"
   <!--MultiDisksNow--
-  >><i class="mdui-list-item-icon mdui-icon material-icons">cloud</i>
+>
+  ><i class="mdui-list-item-icon mdui-icon material-icons">cloud</i>
   <div class="mdui-list-item-content">
     <!--MultiDisksName-->
   </div>
