--- a/src/components/head.html
+++ b/src/components/head.html
@@ -1,7 +1,9 @@
 <link rel="preconnect" href="https://cdn.jsdelivr.net">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com">
+<link rel="preconnect" href="https://renexmoe.vercel.app">
 <meta charset="utf-8" />
+<link rel="shortcut icon" href="<!--base_path-->favicon.ico" type="image/x-icon">
 <meta name="viewport" content="width=device-width, initial-scale=1.0,maximum-scale=1.0, user-scalable=no" />
 <title>
     <!--Title-->
