Update:Add more and more features

--- a/src/components/drawer.html
+++ b/src/components/drawer.html
@@ -1,7 +1,6 @@
 <div class="mdui-drawer mdui-drawer-close" id="main-drawer">
   <div class="mdui-list" mdui-collapse="{accordion: true}">
     @@include('./drawer-list/admin.html')
-    <div class="mdui-divider"></div>
     <li
       class="mdui-list-item mdui-ripple"
       href="javascript:void(0);"
@@ -22,7 +21,7 @@
     @@include('./drawer-list/disk-list.html')
     <a
       href="https://github.com/qkqpttgf/OneManager-php"
-      class="mdui-list-item mdui-ripple mdui-hidden-sm-up"
+      class="mdui-list-item mdui-ripple"
       ><i class="mdui-list-item-icon mdui-icon material-icons">code</i>
       <div class="mdui-list-item-content">Github</div>
     </a>
