--- a/src/components/drawer-list/admin.html
+++ b/src/components/drawer-list/admin.html
@@ -6,8 +6,13 @@
 <!--AdminStart-->
 <li class="mdui-list-item mdui-ripple" href="?setup"><a class="mdui-list-item-icon mdui-icon material-icons"
     href="?setup">account_circle</a><a class="mdui-list-item-content" href="?setup">管理</a></li>
-<li class="mdui-list-item mdui-ripple" onclick='document.cookie=null;window.location.reload();'><i
+<li class="mdui-list-item mdui-ripple" onclick='document.cookie=``;window.location.reload();' id="logout"><i
     class="mdui-icon material-icons mdui-list-item-icon">exit_to_app</i>
 <div class="mdui-list-item-content">退出登陆</div>
 </li>
+<li class="mdui-list-item mdui-ripple" id="checkupdate"><i
+    class="mdui-icon material-icons mdui-list-item-icon">update</i>
+<div class="mdui-list-item-content">检查主题更新</div>
+</li>
+<div class="mdui-divider"></div>
 <!--AdminEnd-->
