Update Markdown Render;Format Code

--- a/src/components/container/File/pdf.html
+++ b/src/components/container/File/pdf.html
@@ -1,6 +1,3 @@
 <!--IspdfFileStart-->
-<pre id="editor"
-    style="white-space: pre-wrap;font-family: JetBrains Mono,Fira Code,Sarasa Mono SC,Cascadia Code,Menlo,Consolas,monaco,monospace;">
-    PDF暂不支持 懂？
-</pre>
+<embed src="<!--FileEncodeReplaceUrl-->" type="application/pdf">
 <!--IspdfFileEnd-->
