--- a/src/components/container/Folder/foot.html
+++ b/src/components/container/Folder/foot.html
@@ -1,11 +1,19 @@
 <!--ReadmemdStart-->
-<div class="mdui-chip mdui-ripple mdui-hidden-xs"><span class="mdui-chip-icon"><i
-    class="mdui-icon material-icons">face</i></span><span class="mdui-chip-title">README.md</span></div>
-<div class="mdui-typo mdui-shadow-3 markdown" style="padding: 20px;margin: 20px 0" id="readme"><textarea
-id="readme-md"><!--ReadmemdContent--></textarea></div>
+<div class="mdui-chip mdui-ripple mdui-hidden-xs">
+  <span class="mdui-chip-icon"
+    ><i class="mdui-icon material-icons">face</i></span
+  ><span class="mdui-chip-title">README.md</span>
+</div>
+<div
+  class="mdui-typo mdui-shadow-3 markdown"
+  style="padding: 20px; margin: 20px 0"
+  id="readme"
+>
+  <pre><code id="readme-md"><!--ReadmemdContent--></code></pre>
+</div>
 <!--ReadmemdEnd-->
 <!--FootomfStart-->
-<div class="mdui-typo mdui-shadow-3" style="padding: 20px;margin: 20px 0">
-<!--FootomfContent-->
+<div class="mdui-typo mdui-shadow-3" style="padding: 20px; margin: 20px 0">
+  <!--FootomfContent-->
 </div>
 <!--FootomfEnd-->
