--- a/src/components/container/Folder/head.html
+++ b/src/components/container/Folder/head.html
@@ -1,11 +1,19 @@
 <!--HeadomfStart-->
-<div class="mdui-typo mdui-shadow-3" style="padding: 20px;margin: 20px 0">
-    <!--HeadomfContent-->
+<div class="mdui-typo mdui-shadow-3" style="padding: 20px; margin: 20px 0">
+  <!--HeadomfContent-->
 </div>
 <!--HeadomfEnd-->
 <!--HeadmdStart-->
-<div class="mdui-chip mdui-ripple mdui-hidden-xs"><span class="mdui-chip-icon"><i
-            class="mdui-icon material-icons">face</i></span><span class="mdui-chip-title">HEAD.md</span></div>
-<div class="mdui-typo mdui-shadow-3 markdown" style="padding: 20px;margin: 20px 0" id="head"><textarea
-        id="head-md"><!--HeadmdContent--></textarea></div>
+<div class="mdui-chip mdui-ripple mdui-hidden-xs">
+  <span class="mdui-chip-icon"
+    ><i class="mdui-icon material-icons">face</i></span
+  ><span class="mdui-chip-title">HEAD.md</span>
+</div>
+<div
+  class="mdui-typo mdui-shadow-3 markdown"
+  style="padding: 20px; margin: 20px 0"
+  id="head"
+>
+<pre><code id="head-md"><!--HeadmdContent--></code></pre>
+</div>
 <!--HeadmdEnd-->
