--- a/src/components/head.html
+++ b/src/components/head.html
@@ -1,28 +1,35 @@
-<link rel="preconnect" href="https://cdn.jsdelivr.net">
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com">
-<link rel="preconnect" href="https://renexmoe.vercel.app">
+<link rel="preconnect" href="https://cdn.jsdelivr.net" />
+<link rel="preconnect" href="https://fonts.googleapis.com" />
+<link rel="preconnect" href="https://fonts.gstatic.com" />
+<link rel="preconnect" href="https://renexmoe.vercel.app" />
 <meta charset="utf-8" />
-<link rel="shortcut icon" href="<!--base_path-->favicon.ico" type="image/x-icon">
-<meta name="viewport" content="width=device-width, initial-scale=1.0,maximum-scale=1.0, user-scalable=no" />
-<title>
-    <!--Title-->
-</title>
-<meta name="description" content="A Onemanager-PHP site with Theme-renexmoe">
+<link
+  rel="shortcut icon"
+  href="<!--base_path-->favicon.ico"
+  type="image/x-icon"
+/>
+<meta
+  name="viewport"
+  content="width=device-width, initial-scale=1.0,maximum-scale=1.0, user-scalable=no"
+/>
+<title><!--Title--></title>
+<meta name="description" content="A Onemanager-PHP site with Theme-renexmoe" />
 <meta name="theme-color" content="#fff" />
 <!--BackgroundStart-->
 <style>
-    body {
-        --bg: url("<!--BackgroundUrl-->");
-        background-repeat: no-repeat;
-        background-size: cover;
-        background-attachment: fixed;
-        background-image: var(--bg)
-    }
+  body {
+    --bg: url("<!--BackgroundUrl-->");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
+    background-image: var(--bg);
+  }
 
-    .mdui-shadow-3 {
-        background: rgba(255, 255, 255, 0.5)
-    }
+  .mdui-shadow-3 {
+    background: rgba(255, 255, 255, 0.5);
+  }
 </style>
-<script>window.disableddarkmode = true;</script>
+<script>
+  window.disableddarkmode = true;
+</script>
 <!--BackgroundEnd-->
