--- a/src/components/container/File/office.html
+++ b/src/components/container/File/office.html
@@ -1,4 +1,8 @@
 <!--IsofficeFileStart-->
-<iframe id="office-a" src="https://view.officeapps.live.com/op/view.aspx?src=<!--FileEncodeDownUrl-->"
-    style="width: 100%;height: 800px" frameborder="0"></iframe>
+<iframe
+  id="office-a"
+  src="https://view.officeapps.live.com/op/view.aspx?src=<!--FileEncodeDownUrl-->"
+  style="width: 100%; height: 800px"
+  frameborder="0"
+></iframe>
 <!--IsofficeFileEnd-->
