--- a/src/components/container/encrypt.html
+++ b/src/components/container/encrypt.html
@@ -1,16 +1,24 @@
 <!--EncryptedStart-->
-<div class="mdui-col-md-6 mdui-col-offset-md-3"><br>
-    <center>
-        <div class="mdui-typo-title">这是一个受保护的文件夹，您需要提供访问密码才能查看。</div>
-    </center>
-    <form action="" method="post">
-        <div class="mdui-textfield mdui-textfield-floating-label"><i
-                class="mdui-icon material-icons">https</i><label class="mdui-textfield-label">
-                <!--constStr@InputPassword--></label><input name="password1" class="mdui-textfield-input"
-                type="password" /></div><br><button type="submit"
-            class="mdui-center mdui-btn mdui-btn-raised mdui-ripple mdui-color-theme"><i
-                class="mdui-icon material-icons">fingerprint</i>
-            <!--constStr@Submit--></button>
-    </form>
+<div class="mdui-col-md-6 mdui-col-offset-md-3">
+  <br />
+  <center>
+    <div class="mdui-typo-title">
+      这是一个受保护的文件夹，您需要提供访问密码才能查看。
+    </div>
+  </center>
+  <form action="" method="post">
+    <div class="mdui-textfield mdui-textfield-floating-label">
+      <i class="mdui-icon material-icons">https</i
+      ><label class="mdui-textfield-label"> <!--constStr@InputPassword--></label
+      ><input name="password1" class="mdui-textfield-input" type="password" />
+    </div>
+    <br /><button
+      type="submit"
+      class="mdui-center mdui-btn mdui-btn-raised mdui-ripple mdui-color-theme"
+    >
+      <i class="mdui-icon material-icons">fingerprint</i>
+      <!--constStr@Submit-->
+    </button>
+  </form>
 </div>
 <!--EncryptedEnd-->
