Update to Version v1.1.4

--- a/src/components/drawer-list/disk-list.html
+++ b/src/components/drawer-list/disk-list.html
@@ -4,7 +4,7 @@
   href="<!--MultiDisksUrl-->"
   class="mdui-list-item mdui-ripple"
   ><i class="mdui-list-item-icon mdui-icon material-icons">cloud</i>
-  <div class="mdui-list-item-content">
+  <div class="mdui-list-item-content mdui-text-truncate">
     <!--MultiDisksName-->
   </div>
 </a>
