--- a/src/components/head.html
+++ b/src/components/head.html
@@ -33,3 +33,21 @@
   window.disableddarkmode = true;
 </script>
 <!--BackgroundEnd-->
+<!--BackgroundMStart-->
+<style>
+  body {
+    --bg: url("<!--BackgroundMUrl-->");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
+    background-image: var(--bg);
+  }
+
+  .mdui-shadow-3 {
+    background: rgba(255, 255, 255, 0.5);
+  }
+</style>
+<script>
+  window.disableddarkmode = true;
+</script>
+<!--BackgroundMEnd-->
