--- a/src/components/container/admin.html
+++ b/src/components/container/admin.html
@@ -22,7 +22,7 @@
       <div class="mdui-textfield mdui-textfield-floating-label">
         <i class="mdui-icon material-icons">lock</i
         ><label class="mdui-textfield-label">密码</label
-        ><input class="mdui-textfield-input" name="password1" type="new-password" />
+        ><input class="mdui-textfield-input" name="password1" type="password" />
       </div>
     </div>
     <div class="mdui-dialog-actions">
