--- a/src/components/container/File/music.html
+++ b/src/components/container/File/music.html
@@ -4,6 +4,6 @@
   src="<!--FileDownUrl-->"
   controls
   autoplay
-  style="width: 100%; margin-top: 10%"
+  style="width: 100%; margin-top: 10%;margin-bottom: 10%;">
 ></audio>
 <!--IsmusicFileEnd-->
