--- a/src/css/mdui.css
+++ b/src/css/mdui.css
@@ -282,290 +282,6 @@ body.mdui-locked {
   }
 }
 /**
- * =============================================================================
- * ************   Helper 辅助类   ************
- * =============================================================================
- */
-/**
- * =================== 边距
- */
-.mdui-m-a-0 {
-  margin: 0px !important;
-}
-.mdui-m-t-0 {
-  margin-top: 0px !important;
-}
-.mdui-m-r-0 {
-  margin-right: 0px !important;
-}
-.mdui-m-b-0 {
-  margin-bottom: 0px !important;
-}
-.mdui-m-l-0 {
-  margin-left: 0px !important;
-}
-.mdui-m-x-0 {
-  margin-right: 0px !important;
-  margin-left: 0px !important;
-}
-.mdui-m-y-0 {
-  margin-top: 0px !important;
-  margin-bottom: 0px !important;
-}
-.mdui-p-a-0 {
-  padding: 0px !important;
-}
-.mdui-p-t-0 {
-  padding-top: 0px !important;
-}
-.mdui-p-r-0 {
-  padding-right: 0px !important;
-}
-.mdui-p-b-0 {
-  padding-bottom: 0px !important;
-}
-.mdui-p-l-0 {
-  padding-left: 0px !important;
-}
-.mdui-p-x-0 {
-  padding-right: 0px !important;
-  padding-left: 0px !important;
-}
-.mdui-p-y-0 {
-  padding-top: 0px !important;
-  padding-bottom: 0px !important;
-}
-.mdui-m-a-1 {
-  margin: 8px !important;
-}
-.mdui-m-t-1 {
-  margin-top: 8px !important;
-}
-.mdui-m-r-1 {
-  margin-right: 8px !important;
-}
-.mdui-m-b-1 {
-  margin-bottom: 8px !important;
-}
-.mdui-m-l-1 {
-  margin-left: 8px !important;
-}
-.mdui-m-x-1 {
-  margin-right: 8px !important;
-  margin-left: 8px !important;
-}
-.mdui-m-y-1 {
-  margin-top: 8px !important;
-  margin-bottom: 8px !important;
-}
-.mdui-p-a-1 {
-  padding: 8px !important;
-}
-.mdui-p-t-1 {
-  padding-top: 8px !important;
-}
-.mdui-p-r-1 {
-  padding-right: 8px !important;
-}
-.mdui-p-b-1 {
-  padding-bottom: 8px !important;
-}
-.mdui-p-l-1 {
-  padding-left: 8px !important;
-}
-.mdui-p-x-1 {
-  padding-right: 8px !important;
-  padding-left: 8px !important;
-}
-.mdui-p-y-1 {
-  padding-top: 8px !important;
-  padding-bottom: 8px !important;
-}
-.mdui-m-a-2 {
-  margin: 16px !important;
-}
-.mdui-m-t-2 {
-  margin-top: 16px !important;
-}
-.mdui-m-r-2 {
-  margin-right: 16px !important;
-}
-.mdui-m-b-2 {
-  margin-bottom: 16px !important;
-}
-.mdui-m-l-2 {
-  margin-left: 16px !important;
-}
-.mdui-m-x-2 {
-  margin-right: 16px !important;
-  margin-left: 16px !important;
-}
-.mdui-m-y-2 {
-  margin-top: 16px !important;
-  margin-bottom: 16px !important;
-}
-.mdui-p-a-2 {
-  padding: 16px !important;
-}
-.mdui-p-t-2 {
-  padding-top: 16px !important;
-}
-.mdui-p-r-2 {
-  padding-right: 16px !important;
-}
-.mdui-p-b-2 {
-  padding-bottom: 16px !important;
-}
-.mdui-p-l-2 {
-  padding-left: 16px !important;
-}
-.mdui-p-x-2 {
-  padding-right: 16px !important;
-  padding-left: 16px !important;
-}
-.mdui-p-y-2 {
-  padding-top: 16px !important;
-  padding-bottom: 16px !important;
-}
-.mdui-m-a-3 {
-  margin: 24px !important;
-}
-.mdui-m-t-3 {
-  margin-top: 24px !important;
-}
-.mdui-m-r-3 {
-  margin-right: 24px !important;
-}
-.mdui-m-b-3 {
-  margin-bottom: 24px !important;
-}
-.mdui-m-l-3 {
-  margin-left: 24px !important;
-}
-.mdui-m-x-3 {
-  margin-right: 24px !important;
-  margin-left: 24px !important;
-}
-.mdui-m-y-3 {
-  margin-top: 24px !important;
-  margin-bottom: 24px !important;
-}
-.mdui-p-a-3 {
-  padding: 24px !important;
-}
-.mdui-p-t-3 {
-  padding-top: 24px !important;
-}
-.mdui-p-r-3 {
-  padding-right: 24px !important;
-}
-.mdui-p-b-3 {
-  padding-bottom: 24px !important;
-}
-.mdui-p-l-3 {
-  padding-left: 24px !important;
-}
-.mdui-p-x-3 {
-  padding-right: 24px !important;
-  padding-left: 24px !important;
-}
-.mdui-p-y-3 {
-  padding-top: 24px !important;
-  padding-bottom: 24px !important;
-}
-.mdui-m-a-4 {
-  margin: 32px !important;
-}
-.mdui-m-t-4 {
-  margin-top: 32px !important;
-}
-.mdui-m-r-4 {
-  margin-right: 32px !important;
-}
-.mdui-m-b-4 {
-  margin-bottom: 32px !important;
-}
-.mdui-m-l-4 {
-  margin-left: 32px !important;
-}
-.mdui-m-x-4 {
-  margin-right: 32px !important;
-  margin-left: 32px !important;
-}
-.mdui-m-y-4 {
-  margin-top: 32px !important;
-  margin-bottom: 32px !important;
-}
-.mdui-p-a-4 {
-  padding: 32px !important;
-}
-.mdui-p-t-4 {
-  padding-top: 32px !important;
-}
-.mdui-p-r-4 {
-  padding-right: 32px !important;
-}
-.mdui-p-b-4 {
-  padding-bottom: 32px !important;
-}
-.mdui-p-l-4 {
-  padding-left: 32px !important;
-}
-.mdui-p-x-4 {
-  padding-right: 32px !important;
-  padding-left: 32px !important;
-}
-.mdui-p-y-4 {
-  padding-top: 32px !important;
-  padding-bottom: 32px !important;
-}
-.mdui-m-a-5 {
-  margin: 40px !important;
-}
-.mdui-m-t-5 {
-  margin-top: 40px !important;
-}
-.mdui-m-r-5 {
-  margin-right: 40px !important;
-}
-.mdui-m-b-5 {
-  margin-bottom: 40px !important;
-}
-.mdui-m-l-5 {
-  margin-left: 40px !important;
-}
-.mdui-m-x-5 {
-  margin-right: 40px !important;
-  margin-left: 40px !important;
-}
-.mdui-m-y-5 {
-  margin-top: 40px !important;
-  margin-bottom: 40px !important;
-}
-.mdui-p-a-5 {
-  padding: 40px !important;
-}
-.mdui-p-t-5 {
-  padding-top: 40px !important;
-}
-.mdui-p-r-5 {
-  padding-right: 40px !important;
-}
-.mdui-p-b-5 {
-  padding-bottom: 40px !important;
-}
-.mdui-p-l-5 {
-  padding-left: 40px !important;
-}
-.mdui-p-x-5 {
-  padding-right: 40px !important;
-  padding-left: 40px !important;
-}
-.mdui-p-y-5 {
-  padding-top: 40px !important;
-  padding-bottom: 40px !important;
-}
-/**
  * ======================== 快速浮动
  */
 /* 向左浮动 */
@@ -611,21 +327,6 @@ body.mdui-locked {
 /* 文本向右对齐 */
 .mdui-text-right {
   text-align: right !important;
-}
-/**
- * ========================= 文本大小写转换
- */
-/* 文本转为小写 */
-.mdui-text-lowercase {
-  text-transform: lowercase !important;
-}
-/* 文本转为大写 */
-.mdui-text-uppercase {
-  text-transform: uppercase !important;
-}
-/* 文本转为单词的首字母大写 */
-.mdui-text-capitalize {
-  text-transform: capitalize !important;
 }
 /**
  * ======================== 文本截断
@@ -777,11 +478,7 @@ body.mdui-locked {
   font-weight: 400;
   font-family: "Material Icons";
   font-style: normal;
-  src: local("Material Icons"), local("MaterialIcons-Regular"),
-    url(https://cdn.jsdelivr.net/npm/mdui@1.0.1/dist/icons/material-icons/MaterialIcons-Regular.woff2)
-      format("woff2"),
-    url(https://cdn.jsdelivr.net/npm/mdui@1.0.1/dist/icons/material-icons/MaterialIcons-Regular.woff)
-      format("woff");
+  src: url(https://fonts.gstatic.com/s/materialiconsoutlined/v38/gok-H7zzDkdnRel8-DQ6KAXJ69wP1tGnf4ZGhUce.woff2) format('woff2');
 }
 .material-icons {
   /* stylelint-disable-next-line */
@@ -1384,7 +1081,7 @@ body.mdui-locked {
   color: rgba(255, 255, 255, 0.7);
 }
 .mdui-theme-layout-dark .mdui-typo code {
-  color: #ffcdd2;
+  color: #ececec;
   background-color: #424242;
 }
 .mdui-theme-layout-dark .mdui-typo pre {
@@ -5319,55 +5016,6 @@ body.mdui-loaded .mdui-drawer {
 }
 .mdui-dialog-prompt .mdui-textfield {
   padding-top: 0;
-}
-/**
- * =============================================================================
- * ************   Tooltip 工具提示   ************
- * =============================================================================
- */
-.mdui-tooltip {
-  position: absolute;
-  z-index: 9000;
-  display: inline-block;
-  -webkit-box-sizing: border-box;
-  box-sizing: border-box;
-  max-width: 180px;
-  min-height: 32px;
-  padding: 8px 16px;
-  color: #fff;
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 22px;
-  text-align: left;
-  background-color: rgba(97, 97, 97, 0.9);
-  border-radius: 2px;
-  -webkit-transform: scale(0);
-  transform: scale(0);
-  opacity: 0;
-  -webkit-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  -webkit-transition-duration: 0.15s;
-  transition-duration: 0.15s;
-  -webkit-transition-property: opacity, -webkit-transform;
-  transition-property: opacity, -webkit-transform;
-  transition-property: opacity, transform;
-  transition-property: opacity, transform, -webkit-transform;
-  will-change: opacity, transform;
-}
-@media (min-width: 1024px) {
-  .mdui-tooltip {
-    max-width: 200px;
-    min-height: 24px;
-    padding: 4px 8px;
-    font-size: 12px;
-    line-height: 18px;
-  }
-}
-/* 显示工具提示 */
-.mdui-tooltip-open {
-  -webkit-transform: scale(1);
-  transform: scale(1);
-  opacity: 1;
 }
 /**
  * =============================================================================
