--- a/src/components/container/Folder.html
+++ b/src/components/container/Folder.html
@@ -34,7 +34,7 @@
       </div>
     </li>
     <!--BackArrowStart-->
-    <li class="mdui-list-item mdui-ripple back">
+    <li class="mdui-list-item mdui-ripple back-page">
       <div class="mdui-row mdui-col-sm-12">
         <a href="<!--BackArrowUrl-->">
           <div class="mdui-col-xs-7">
