--- a/src/components/drawer-list/disk-list.html
+++ b/src/components/drawer-list/disk-list.html
@@ -1,13 +1,19 @@
 <!--MultiDiskAreaStart-->
 <div class="mdui-divider"></div>
-<!--MultiDisksStart--><a
-  href="<!--MultiDisksUrl-->"
-  class="mdui-list-item mdui-ripple"
-  ><i class="mdui-list-item-icon mdui-icon material-icons">cloud</i>
-  <div class="mdui-list-item-content mdui-text-truncate">
+<!--MultiDisksStart-->
+<li class="mdui-list-item mdui-ripple">
+  <a
+    href="<!--MultiDisksUrl-->"
+    class="mdui-list-item-icon mdui-icon material-icons"
+    >cloud</a
+  >
+  <a
+    href="<!--MultiDisksUrl-->"
+    class="mdui-list-item-content mdui-text-truncate disk_name"
+  >
     <!--MultiDisksName-->
-  </div>
-</a>
+  </a>
+</li>
 <!--MultiDisksEnd-->
 <div class="mdui-divider"></div>
 <!--MultiDiskAreaEnd-->
