--- a/src/components/drawer.html
+++ b/src/components/drawer.html
@@ -14,7 +14,7 @@
         href="<!--base_path-->"
         class="mdui-list-item-icon mdui-icon material-icons"
         >home</a
-      ><a href="<!--base_path-->" class="mdui-list-item-content">
+      ><a href="<!--base_path-->" class="mdui-list-item-content" id="home">
         <!--constStr@Home--></a
       >
     </li>
