--- a/src/components/container/File/video.html
+++ b/src/components/container/File/video.html
@@ -1,5 +1,9 @@
 <!--IsvideoFileStart-->
-<video class="mdui-video-fluid" controls style="margin-top: 20px;margin-bottom: 20px;">
+<video
+  class="mdui-video-fluid"
+  controls
+  style="margin-top: 20px; margin-bottom: 20px"
+>
   <source src="<!--FileDownUrl-->" />
   <p>
     Your browser doesn't support HTML5 video. Here is a
