--- a/src/css/app.css
+++ b/src/css/app.css
@@ -66,7 +66,12 @@ footer a {
 }
 
 .mdui-list-item-icon {
-  color: black;
+  --iconcolor:#656565;
+  color: var(--iconcolor) !important;
+}
+
+.mdui-theme-layout-dark .mdui-list-item-icon {
+  --iconcolor: #dadada !important;
 }
 
 .mdui-typo {
