--- a/src/css/mdui.css
+++ b/src/css/mdui.css
@@ -478,7 +478,8 @@ body.mdui-locked {
   font-weight: 400;
   font-family: "Material Icons";
   font-style: normal;
-  src: url(https://fonts.gstatic.com/s/materialiconsoutlined/v38/gok-H7zzDkdnRel8-DQ6KAXJ69wP1tGnf4ZGhUce.woff2) format('woff2');
+  src: url(https://fonts.gstatic.com/s/materialiconsoutlined/v38/gok-H7zzDkdnRel8-DQ6KAXJ69wP1tGnf4ZGhUce.woff2)
+    format("woff2");
 }
 .material-icons {
   /* stylelint-disable-next-line */
@@ -4486,8 +4487,8 @@ select.mdui-select[multiple] option:last-child {
 }
 /* 激活状态的列表项 */
 .mdui-list-item-active {
-  font-weight: 700;
-  background-color: rgba(0, 0, 0, 0.08);
+  color: #ff4081;
+  background-color: #fce4ec;
 }
 .mdui-list-item-active .mdui-list-item-content {
   font-weight: 700;
