--- a/src/components/container/Folder/foot.html
+++ b/src/components/container/Folder/foot.html
@@ -6,7 +6,7 @@
 </div>
 <div
   class="mdui-typo mdui-shadow-3 markdown"
-  style="padding: 20px; margin: 20px 0"
+  style="padding: 20px; margin: 20px 0;overflow-x: scroll;"
   id="readme"
 >
   <pre><code id="readme-md"><!--ReadmemdContent--></code></pre>
