--- a/src/css/mdui.css
+++ b/src/css/mdui.css
@@ -1,4 +1,4 @@
-/*!
+/*
  * mdui 1.0.1 (https://mdui.org)
  * Copyright 2016-2021 zdhxiong
  * Licensed under MIT
@@ -4487,8 +4487,10 @@ select.mdui-select[multiple] option:last-child {
 }
 /* 激活状态的列表项 */
 .mdui-list-item-active {
-  color: #ff4081;
-  background-color: #fce4ec;
+  --color-active: #ff4081;
+  color: var(--color-active) !important;
+  --bg-color-active: #fce4ec;
+  background-color: var(--bg-color-active) !important;
 }
 .mdui-list-item-active .mdui-list-item-content {
   font-weight: 700;
@@ -4629,7 +4631,7 @@ select.mdui-select[multiple] option:last-child {
   opacity: 0.7;
 }
 .mdui-theme-layout-dark .mdui-list-item-active {
-  background-color: rgba(255, 255, 255, 0.08);
+  --bg-color-active: rgba(255, 255, 255, 0.08);
 }
 @media (prefers-color-scheme: dark) {
   .mdui-theme-layout-auto .mdui-list .mdui-subheader::before,
@@ -4653,7 +4655,7 @@ select.mdui-select[multiple] option:last-child {
     opacity: 0.7;
   }
   .mdui-theme-layout-auto .mdui-list-item-active {
-    background-color: rgba(255, 255, 255, 0.08);
+    --bg-color-active: rgba(255, 255, 255, 0.08);
   }
 }
 /**
