--- a/src/components/container/Folder.html
+++ b/src/components/container/Folder.html
@@ -4,7 +4,7 @@
   class="mdui-row mdui-shadow-3"
   style="padding: 5px; margin: 20px 0; border-radius: 8px"
 >
-  <ul class="mdui-list">
+  <ul class="mdui-list" id="file-list">
     <li class="mdui-list-item mdui-ripple">
       <div class="mdui-row mdui-col-xs-12">
         <div class="mdui-col-xs-12 mdui-col-sm-7">
@@ -50,4 +50,8 @@
   </ul>
 </div>
 @@include("./Folder/foot.html")
+<script>
+  document.querySelector("#admin-menu").innerHTML +=
+    '<li class="mdui-menu-item"><a href="javascript:void(0);"class="mdui-ripple getalllink"><i class="mdui-menu-item-icon mdui-icon material-icons">link</i>批量链接</a></li>';
+</script>
 <!--IsFolderEnd-->
