--- a/src/components/container/Folder/head.html
+++ b/src/components/container/Folder/head.html
@@ -11,9 +11,9 @@
 </div>
 <div
   class="mdui-typo mdui-shadow-3 markdown"
-  style="padding: 20px; margin: 20px 0;overflow-x: scroll;"
+  style="padding: 20px; margin: 20px 0; overflow-x: scroll"
   id="head"
 >
-<pre><code id="head-md"><!--HeadmdContent--></code></pre>
+  <pre><code id="head-md"><!--HeadmdContent--></code></pre>
 </div>
 <!--HeadmdEnd-->
