--- a/src/components/container/file.html
+++ b/src/components/container/file.html
@@ -1,5 +1,9 @@
 <!--IsFileStart-->
-<div id="file" class="mdui-shadow-3" style="padding: 5px;margin: 20px 0px;padding: 20px;border-radius: 8px;">
+<div
+  id="file"
+  class="mdui-shadow-3"
+  style="padding: 5px; margin: 20px 0px; padding: 20px; border-radius: 8px"
+>
   @@include("./File/img.html") @@include("./File/music.html")
   @@include("./File/video.html") @@include("./File/office.html")
   @@include("./File/pdf.html") @@include("./File/txt.html")
