--- a/src/components/container/File/pdf.html
+++ b/src/components/container/File/pdf.html
@@ -1,3 +1,3 @@
 <!--IspdfFileStart-->
-<embed src="<!--FileEncodeReplaceUrl-->" type="application/pdf">
+<embed src="<!--FileEncodeReplaceUrl-->" type="application/pdf" />
 <!--IspdfFileEnd-->
