[Update] Renexmoe v1.3 - 优化前端性能，降低请求量 - 修改部分样式 - 增加翻页处理

--- a/src/components/container/File/music.html
+++ b/src/components/container/File/music.html
@@ -5,7 +5,5 @@
   controls
   autoplay
   style="width: 100%; margin-top: 10%; margin-bottom: 10%"
->
-  >
-</audio>
+></audio>
 <!--IsmusicFileEnd-->
