--- a/src/css/app.css
+++ b/src/css/app.css
@@ -91,9 +91,9 @@ footer a {
   border-radius: 8px;
 }
 
-.mdui-container .mdui-list-item {
+/* .mdui-container .mdui-list-item {
   border-radius: 50px;
-}
+} */
 
 #file {
   margin-top: 1%;
